--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="card-body__wrapper">
           <p>ADVICE #<span class="advice-id">0</span></p>
           <h2 class="quote">""</h2>
-          <img class="divider" alt="divider" />
+          <img class="divider" src="#" alt="divider" />
         </div>
 
         <div class="generate-container">
